# Tribe.-Corporate-social-network-Twitter-clone-

./: .gitignore  README.md  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  handlers.py
backend/app/api/routers/: tweets.py  users.py
backend/app/core/: config.py
backend/app/crud/: followers.py  like.py  media.py  tweet.py  user.py
backend/app/db/: database.py
backend/app/models/: __init__.py  followers.py  like.py  media.py  tweet.py  user.py
backend/app/schemas/: likes.py  responses.py  tweet.py  user.py
backend/tests/: conftest.py  test_main.py
