[project]
name = "tribe"
version = "0.1.0"
description = "My twitter clone for final project"
authors = [
    {name = "Kelvich Bogdan",email = "kelvichrd@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.12.0"
testcontainers = { version = "^4.13.0", extras = ["async"] }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "testcontainers.*",
    "testcontainers",
    "sqlalchemy.*",
    "pytest.*",
    "fastapi.*", 
    "pydantic.*",
    "alembic.*",
    "httpx.*"
]
ignore_missing_imports = true
